--- a/day1.Rmd
+++ b/day1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Day1"
 author: "Vebash Naidoo"
-date: "12/20/2019"
+date: "2019-12-20"
 output: html_document
 editor_options: 
   chunk_output_type: console
