Day 17: More DQ Statistics course

--- a/day16&17_DQ_Sampling.Rmd
+++ b/day16&17_DQ_Sampling.Rmd
@@ -211,22 +211,164 @@ Let's visualize the discrepancy between a parameter and its corresponding statis
     + Using plt.axhline(), draw a horizontal line that represents the average number of points in the population.
 
 ```{python}
-import pandas as pd
-import matplotlib.pyplot as plt
-
-wnba = pd.read_csv('wnba.csv')
-
-pts_list = []
-for i in range(100):
-    sample = wnba.sample(10, random_state = i)
-    pts_list.append(sample['PTS'].mean())
-
-plt.scatter(range(1,101), pts_list)     
-# Below gets the sample mean
-#plt.axhline(sum(pts_list)/(len(pts_list)))
-plt.axhline(wnba['PTS'].mean()) # population mean ...
+# import pandas as pd
+# import matplotlib.pyplot as plt
+# 
+# wnba = pd.read_csv('wnba.csv')
+# 
+# pts_list = []
+# for i in range(100):
+#     sample = wnba.sample(10, random_state = i)
+#     pts_list.append(sample['PTS'].mean())
+# 
+# plt.scatter(range(1,101), pts_list)     
+# # Below gets the sample mean
+# #plt.axhline(sum(pts_list)/(len(pts_list)))
+# plt.axhline(wnba['PTS'].mean()) # population mean ...
 
 ```
+
+#### Chris Albon's Tutorial on 'Apply Operations To Groups In Pandas'
+[Link](https://chrisalbon.com/python/data_wrangling/pandas_apply_operations_to_groups/)
+
+```{python}
+# import modules
+import pandas as pd
+# Create dataframe
+raw_data = {'regiment': ['Nighthawks', 'Nighthawks', 'Nighthawks', 'Nighthawks', 'Dragoons', 'Dragoons', 'Dragoons', 'Dragoons', 'Scouts', 'Scouts', 'Scouts', 'Scouts'], 
+        'company': ['1st', '1st', '2nd', '2nd', '1st', '1st', '2nd', '2nd','1st', '1st', '2nd', '2nd'], 
+        'name': ['Miller', 'Jacobson', 'Ali', 'Milner', 'Cooze', 'Jacon', 'Ryaner', 'Sone', 'Sloan', 'Piger', 'Riani', 'Ali'], 
+        'preTestScore': [4, 24, 31, 2, 3, 4, 24, 31, 2, 3, 2, 3],
+        'postTestScore': [25, 94, 57, 62, 70, 25, 94, 57, 62, 70, 62, 70]}
+df = pd.DataFrame(raw_data, columns = ['regiment', 'company', 'name', 'preTestScore', 'postTestScore'])
+df
+# Create a groupby variable that groups preTestScores by regiment
+groupby_regiment = df['preTestScore'].groupby(df['regiment'])
+# "This grouped variable is now a GroupBy object. It has not actually computed anything yet 
+# except for some intermediate data about the group key df['key1']. The idea is that this object 
+# has all of the information needed to then apply some operation to each of the groups." 
+# -                                                             Python for Data Analysis
+groupby_regiment
+# View a grouping
+# Use list() to show what a grouping looks like
+list(df['preTestScore'].groupby(df['regiment']))
+# Descriptive statistics by group
+df['preTestScore'].groupby(df['regiment']).describe()
+# Mean of each regiment's preTestScore
+groupby_regiment.mean()
+# Mean preTestScores grouped by regiment and company
+df['preTestScore'].groupby([df['regiment'], df['company']]).mean()
+# Mean preTestScores grouped by regiment and company without heirarchical indexing
+df['preTestScore'].groupby([df['regiment'], df['company']]).mean().unstack()
+# Group the entire dataframe by regiment and company
+df.groupby(['regiment', 'company']).mean()
+# Number of observations in each regiment and company
+df.groupby(['regiment', 'company']).size()
+
+# Iterate an operations over groups
+# Group the dataframe by regiment, and for each regiment,
+for name, group in df.groupby('regiment'): 
+    # print the name of the regiment
+    print(name)
+    # print the data of that regiment
+    print(group.mean())
+
+# Group by columns
+# Specifically in this case: group by the data types of the columns (i.e. axis=1) 
+# and then use list() to view what that grouping looks like 
+list(df.groupby(df.dtypes, axis=1))
+
+# In the dataframe "df", group by "regiments, take the mean values of the 
+# other variables for those groups, then display them with the prefix_mean
+df.groupby('regiment').mean().add_prefix('mean_')
+
+# Create a function to get the stats of a group
+def get_stats(group):
+    return {'min': group.min(), 'max': group.max(), 'count': group.count(), 'mean': group.mean()}
+
+# Create bins and bin up postTestScore by those pins    
+bins = [0, 25, 50, 75, 100]
+group_names = ['Low', 'Okay', 'Good', 'Great']
+df['categories'] = pd.cut(df['postTestScore'], bins, labels=group_names)    
+
+# Apply the get_stats() function to each postTestScore bin
+df['postTestScore'].groupby(df['categories']).apply(get_stats).unstack()
+```
+
+From the scatter plot in the last screen, we can notice that the sample means vary a lot around the population mean. With a minimum sample mean of 115 points, a maximum of 301.4, and a population mean of roughly 201.8, we can tell that the sampling error is quite large for some of the cases.
+
+<img src = dq12.png>
+
+Because sample means vary a lot around the population mean, there's a good chance we get a sample that is not representative of the population:
+
+<img src = dq13.png>
+
+This problem can be solved by increasing the sample size. As we increase the sample size, the sample means vary less around the population mean, and the chances of getting an unrepresentative sample decrease.
+
+In our last exercise we took 100 samples, and each had a sample size of 10 units. This is what happens when we repeat the procedure, but increase the size of the samples:
+
+<img src = dq14.png>
+
+We can easily see how sample means tend to vary less and less around the population mean as we increase the sample size. From this observation we can make two conclusions:
+
+- Simple random sampling is not a reliable sampling method when the sample size is small. Because sample means vary a lot around the population mean, there's a good chance we'll get an unrepresentative sample.
+- When we do simple random sampling, we should try to get a sample that is as large as possible. A large sample decreases the variability of the sampling process, which in turn decreases the chances that we'll get an unrepresentative sample.
+
+<img src = dq15.png>
+
+Because simple random sampling is entirely random, it can leave out certain population individuals that are of great interest to some of the questions we may have.
+
+For example, players in basketball play in different positions on the court. The metrics of a player (number of points, number of assists, etc.) depend on their position, and we might want to analyze the patterns for each individual position. If we perform simple random sampling, there's a chance that some categories won't be included in our sample. In other words, it's not guaranteed that we'll have a representative sample that has observations for every position we want to analyze.
+
+There are five unique positions in our data set:
+
+> print(wnba['Pos'].unique()) <br>
+> array(['F', 'G/F', 'G', 'C', 'F/C'], dtype=object)
+
+
+Let's decipher quickly each abbreviation:
+
+<img src = dq16.png>
+
+The downside of simple random sampling is that it can leave out individuals playing in a certain position on the field. Visually, and on a smaller scale, this is what could happen:
+
+<img src = dq17.png>
+
+To ensure we end up with a sample that has observations for all the categories of interest, we can change the sampling method. We can organize our data set into different groups, and then do simple random sampling for every group. We can group our data set by player position, and then sample randomly from each group.
+
+Visually, and on a smaller scale, we need to do this:
+
+<img src = dq18.png>
+
+This sampling method is called stratified sampling, and each stratified group is also known as a stratum.
+
+### Instructions
+Perform stratified sampling: stratify the data set by player position, and then do simple random sampling on every stratum. At the end, use the sample to find which position has the greatest number of points per game.
+
++ Create a new column which describes the number of points a player scored per game during the season. The number of total points a player scored the entire season is stored in the PTS column, and the number of games played in the Games Played column. Give the new column a relevant name.
++ Stratify the wnba data set by player position. The Pos column describes a player's position on the field. Assign each stratum to a different variable.
++ Loop through the strata, and for each stratum:
+
+    + Sample 10 observations using simple random sampling (set random_state = 0).
+    + Find the mean points per game using the sample. Use the new column you've created earlier.
+    + Find a way to store the mean along with its corresponding position. You can use a dictionary.
+    
++ Find the position that has the greatest number of points per game, and assign its name to a variable named position_most_points.
+
+    + To find the dictionary key that has the greatest dictionary value, you can use this technique.
+
+
+
+
+```{python}
+print(wnba['Pos'].unique())
+wnba['Pts_per_game'] = wnba['PTS']/wnba['Games Played']
+wnba_grouped = wnba['Pts_per_game'].groupby(wnba['Pos'])
+
+wnba['Pts_per_game'].groupby(wnba['Pos']).describe()
+```
+
+
 
 
 
